Initialize pyproject.toml for traffic1 project
Add project metadata and dependencies for traffic1.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,1 +1,11 @@
+[project]
+name = "traffic1"
+version = "0.1.0"
+dependencies = [
+    "streamlit",
+    "pandas",
+    "numpy",
+    "matplotlib",
+    "scikit-learn"
+]
 
